[package]
name = "tui-log"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19"
tui = { version = "0.15", default-features = false, features = ['crossterm'] }
log = { version = "0.4.14", features = ["std"] }